--- a/TestDistribute/TestDistribute/TestDistribute.csproj
+++ b/TestDistribute/TestDistribute/TestDistribute.csproj
@@ -11,5 +11,7 @@
 
   <ItemGroup>
     <PackageReference Include="Xamarin.Forms" Version="3.4.0.1008975" />
+    <PackageReference Include="Microsoft.AppCenter" Version="1.13.2" />
+    <PackageReference Include="Microsoft.AppCenter.Distribute" Version="1.13.2" />
   </ItemGroup>
 </Project>
