--- a/TestDistribute/TestDistribute.iOS/Info_Dev.plist
+++ b/TestDistribute/TestDistribute.iOS/Info_Dev.plist
@@ -31,7 +31,7 @@
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>CFBundleName</key>
-	<string>TestDistribute</string>
+	<string>TestDistributeDev</string>
 	<key>XSAppIconAssets</key>
 	<string>Assets.xcassets/AppIcon.appiconset</string>
 	<key>APPCENTER_TOKEN</key>
