--- a/TestDistribute/TestDistribute/TestDistribute.csproj
+++ b/TestDistribute/TestDistribute/TestDistribute.csproj
@@ -36,6 +36,15 @@
     <Optimize>false</Optimize>
     <OutputPath>bin\iPhone\AppCenterMaster</OutputPath>
   </PropertyGroup>
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'AppCenterDev|iPhoneSimulator' ">
+    <IntermediateOutputPath>obj\iPhoneSimulator\AppCenterDev</IntermediateOutputPath>
+    <DebugType></DebugType>
+    <Optimize>false</Optimize>
+    <OutputPath>bin\iPhoneSimulator\AppCenterDev</OutputPath>
+    <DefineConstants></DefineConstants>
+    <NoWarn></NoWarn>
+    <NoStdLib>false</NoStdLib>
+  </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Xamarin.Forms" Version="3.4.0.1008975" />
     <PackageReference Include="Microsoft.AppCenter" Version="1.13.2" />
