--- a/TestDistribute/TestDistribute.iOS/Info_Dev.plist
+++ b/TestDistribute/TestDistribute.iOS/Info_Dev.plist
@@ -23,7 +23,7 @@
 	<key>MinimumOSVersion</key>
 	<string>8.0</string>
 	<key>CFBundleDisplayName</key>
-	<string>TestDistributeDev</string>
+	<string>TestDistribute</string>
 	<key>CFBundleIdentifier</key>
 	<string>com.companyname.TestDistributeDev</string>
 	<key>CFBundleVersion</key>
@@ -31,10 +31,10 @@
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>CFBundleName</key>
-	<string>TestDistributeDev</string>
-	<key>XSAppIconAssets</key>
-	<string>Assets.xcassets/AppIcon.appiconset</string>
+	<string>TestDistribute</string>
 	<key>APPCENTER_TOKEN</key>
 	<string>ADD DEV SECURE HERE</string>
+	<key>XSAppIconAssets</key>
+	<string>Assets.xcassets/AppIconDev.appiconset</string>
 </dict>
 </plist>
