--- a/TestDistribute/TestDistribute.iOS/Info_Master.plist
+++ b/TestDistribute/TestDistribute.iOS/Info_Master.plist
@@ -23,7 +23,7 @@
 	<key>MinimumOSVersion</key>
 	<string>8.0</string>
 	<key>CFBundleDisplayName</key>
-	<string>TestDistributeMaster</string>
+	<string>TestDistribute</string>
 	<key>CFBundleIdentifier</key>
 	<string>com.companyname.TestDistributeMaster</string>
 	<key>CFBundleVersion</key>
@@ -32,9 +32,9 @@
 	<string>LaunchScreen</string>
 	<key>CFBundleName</key>
 	<string>TestDistribute</string>
-	<key>XSAppIconAssets</key>
-	<string>Assets.xcassets/AppIcon.appiconset</string>
 	<key>APPCENTER_TOKEN</key>
 	<string>ADD MASTER SECURE HERE</string>
+	<key>XSAppIconAssets</key>
+	<string>Assets.xcassets/AppIconMaster.appiconset</string>
 </dict>
 </plist>
