--- a/TestDistribute/TestDistribute/TestDistribute.csproj
+++ b/TestDistribute/TestDistribute/TestDistribute.csproj
@@ -45,6 +45,15 @@
     <NoWarn></NoWarn>
     <NoStdLib>false</NoStdLib>
   </PropertyGroup>
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'AppCenterMaster|iPhoneSimulator' ">
+    <IntermediateOutputPath>obj\iPhoneSimulator\AppCenterDev\netstandard2.0</IntermediateOutputPath>
+    <DebugType></DebugType>
+    <Optimize>false</Optimize>
+    <OutputPath>bin\iPhoneSimulator\AppCenterDev</OutputPath>
+    <DefineConstants>;APPCENTERDEV;NETSTANDARD;NETSTANDARD2_0</DefineConstants>
+    <NoWarn></NoWarn>
+    <NoStdLib>false</NoStdLib>
+  </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Xamarin.Forms" Version="3.4.0.1008975" />
     <PackageReference Include="Microsoft.AppCenter" Version="1.13.2" />
