--- a/TestDistribute/TestDistribute.iOS/Info_Master.plist
+++ b/TestDistribute/TestDistribute.iOS/Info_Master.plist
@@ -25,7 +25,7 @@
 	<key>CFBundleDisplayName</key>
 	<string>TestDistribute</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.companyname.TestDistributeMaster</string>
+	<string>com.cogniteq.TestDistributeMaster</string>
 	<key>CFBundleVersion</key>
 	<string>1.0</string>
 	<key>UILaunchStoryboardName</key>
